// Copyright 2020 Anapaya Systems
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/scionproto/scion/pkg/proto/control_plane/experimental";

package proto.control_plane.experimental.v1;

message EPICDetachedExtension {
    // Remaining bytes of the full MAC in the hop entry.
    bytes auth_hop_entry = 1;
    // Remaining bytes of the full MAC in the peer entries.
    repeated bytes auth_peer_entries = 2;
}
